Implementación del archivo 'recepción-traspaso.html'.

--- a/Recepcion-traspaso.html
+++ b/Recepcion-traspaso.html
@@ -47,7 +47,7 @@
     </div>
     
     <main class="content">
-        <h2>Inventarios</h2>
+        <h2>Recepción y Asignación</h2>
         <div class="stats">
             <div class="stat">
                 <span>Activos</span>
