Aclaraciones y reglas en el README.md.

--- a/Equipos.html
+++ b/Equipos.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Hamburguesa Lateral</title>
+    <title>Equipos</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="Css/styles.css">
+    <link rel="stylesheet" href="Css/global.css">
+    <link rel="stylesheet" href="Css/menu-lateral.css">
+    <link rel="stylesheet" href="Css/equipos.css">
     <!-- JS -->
     <script src="JavaScript/script.js" defer></script>
 </head>
