Implementación del menú cabecero y ajustes en los estilos.

--- a/Equipos.html
+++ b/Equipos.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="Css/global.css">
     <link rel="stylesheet" href="Css/menu-lateral.css">
     <link rel="stylesheet" href="Css/equipos.css">
+
+    <!-- Font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- JS -->
     <script src="JavaScript/script.js" defer></script>
 </head>
@@ -49,7 +52,23 @@
     </div>
     
     <main class="content">
-        <h2>Inventarios</h2>
+        <h2>Inventario</h2>
+        <section class="cabecero-equipos">
+                <ul class="lista-usuarios">
+                    <li><a href="#">Pendientes</a></li>
+                    <li><a href="#">Reportes</a></li>
+                    <li><a href="#">Líder TIC</a></li>
+                    <li><a href="#">John Doe</a></li>
+                </ul>
+
+            <div class="filtro-fecha">
+                <ul>
+                    <li>Desde <i class="fa-regular fa-calendar"></i></i></li>
+                    <li><i class="fa-solid fa-arrow-right"></i></li>
+                    <li>Hasta <i class="fa-regular fa-calendar"></i></li>
+                </ul>
+            </div>
+        </section>
         <div class="stats">
             <div class="stat">
                 <span>Activos</span>
